// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbedBlock no data 1`] = `
<MediaBlock
  alt=""
  authorName=""
  blockProps={
    Object {
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
    }
  }
  providerName=""
  src={null}
>
  <button
    className="button button-secondary no Tooltip__button"
  >
    Delete
  </button>
</MediaBlock>
`;

exports[`EmbedBlock renders 1`] = `
<MediaBlock
  alt=""
  authorName=""
  blockProps={
    Object {
      "entity": Object {
        "getData": [Function],
      },
      "entityType": Object {},
    }
  }
  providerName=""
  src="http://www.example.com/example.png"
>
  <a
    className="Tooltip__link EmbedBlock__link"
    href="http://www.example.com/"
    rel="noopener noreferrer"
    target="_blank"
    title="http://www.example.com/"
  >
    Test title
  </a>
  <button
    className="button button-secondary no Tooltip__button"
  >
    Delete
  </button>
</MediaBlock>
`;
